cluster strength algo fix

--- a/Gene_trace_classifier.ipynb
+++ b/Gene_trace_classifier.ipynb
@@ -674,8 +674,8 @@
     "def calc_cluster_strength(xarr, yarr, cluster_indices, cluster_indices, cluster_centers):\n",
     "    rv = 0\n",
     "    for x in range(len(cluster_indices)): #total things idfk\n",
-    "        rv += math.sqrt((xarr[x] - cluster_centers[cluster_indices[x]])**2)\n",
-    "        rv += math.sqrt((xarr[y] - cluster_centers[cluster_indices[y]])**2)\n",
+    "        rv += math.sqrt((xarr[x] - cluster_centers[cluster_indices[x][0]])**2)\n",
+    "        rv += math.sqrt((xarr[x] - cluster_centers[cluster_indices[x][1]])**2)\n",
     "    return rv\n",
     "\n",
     "cluster_indices, cluster_centers = k_means_compare(\"neg_calc\", \"std\", \"1\", clusters = 4, vis = True, normalization = True)\n",
